[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player2.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player1.gd" type="Script" id=3]
[ext_resource path="res://Savec-gxew6.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 96 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.698039, 0.12549, 0.12549, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 15
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7

[sub_resource type="DynamicFont" id=6]
size = 90
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 15
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 736, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8, 336 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.494118, 0.380392, 0.380392, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=10]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0.686275 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.686275 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="DynamicFont" id=13]
size = 30
extra_spacing_bottom = -10
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1" type="KinematicBody2D" parent="."]
position = Vector2( 24, 352 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Player1"]
margin_left = -16.0
margin_top = -96.0
margin_right = 16.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
shape = SubResource( 1 )

[node name="Player2" type="KinematicBody2D" parent="."]
position = Vector2( 1256, 352 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Player2"]
margin_left = -16.0
margin_top = -96.0
margin_right = 16.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource( 1 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 928, 248 )
z_index = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Ball"]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Line2D" type="Line2D" parent="HUD"]
z_as_relative = false
points = PoolVector2Array( 640, 0, 640, 720 )
width = 3.0

[node name="Score1" type="Label" parent="HUD"]
anchor_bottom = 0.043
margin_left = 568.0
margin_top = 8.0
margin_right = 627.0
margin_bottom = 57.04
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "12"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="HUD"]
anchor_bottom = 0.043
margin_left = 656.0
margin_top = 8.0
margin_right = 715.0
margin_bottom = 57.04
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "12"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_Panel" type="Panel" parent="HUD"]
margin_left = 8.0
margin_top = 288.0
margin_right = 1272.0
margin_bottom = 416.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_Label" type="Label" parent="HUD"]
anchor_bottom = 0.043
margin_left = 592.0
margin_top = 304.0
margin_right = 676.0
margin_bottom = 378.04
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Areas" type="Node2D" parent="."]

[node name="corner1" type="StaticBody2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/corner1"]
position = Vector2( 640, 0 )
shape = SubResource( 7 )

[node name="corner2" type="StaticBody2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/corner2"]
position = Vector2( 640, 712 )
shape = SubResource( 7 )

[node name="Area2D1" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Area2D1"]
position = Vector2( -16, 352 )
shape = SubResource( 8 )

[node name="Area2D2" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Area2D2"]
position = Vector2( 1296, 352 )
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]

[node name="Menu" type="WindowDialog" parent="."]
pause_mode = 2
visible = true
margin_left = 496.0
margin_top = 136.0
margin_right = 776.0
margin_bottom = 280.0
custom_styles/panel = SubResource( 9 )
custom_fonts/title_font = SubResource( 10 )
custom_colors/title_color = Color( 0, 0, 0, 1 )
window_title = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skip_button" type="Button" parent="Menu"]
pause_mode = 2
anchor_right = 0.314
anchor_bottom = 0.278
margin_left = 56.0
margin_top = 24.0
margin_right = 133.08
margin_bottom = 19.968
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "DEVAM ET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_button" type="Button" parent="Menu"]
pause_mode = 2
anchor_right = 0.314
anchor_bottom = 0.278
margin_left = 56.0
margin_top = 72.0
margin_right = 133.08
margin_bottom = 67.968
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "KAPAT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Areas/Area2D1" to="." method="_on_Area2D1_body_entered"]
[connection signal="body_entered" from="Areas/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Menu/skip_button" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="Menu/close_button" to="." method="_on_close_button_pressed"]
